# algo

./: .aider.chat.history.md  .aider.ignore  .aider.input.history  .gitignore  .python-version  .venv  .windsurfrules  CLAUDE.md  algo.code-workspace  lc  leetui  package.json  pyproject.toml  scratch-pad.py
.aider.tags.cache.v3/: cache.db
.obsidian/: appearance.json  bookmarks.json  community-plugins.json  graph.json  publish.json  workspace.json
ace-tpi/: arrays.py  binary-trees.py  hash-tables.py  linked-lists.py  lists.py  stacks-and-queues.py  tries.py
algo-expert/: arrays.py  continuous-median.py  doubly-linked-list.py  dynamic-programming.py  linked-lists.py  min-heap.py  min-max-stack.py  strings.py  trees.py
cpp-algo/: .gitignore  CMakeLists.txt  conanfile.txt  main.cpp  tests.cpp
cpp-algo/arrays-and-strings/: arrays.cpp  arrays.h  strings.cpp  strings.h
cpp-algo/src/: main.cpp
cpp-algo/src/arrays-and-strings/: arrays.cpp  arrays.h  arrays_test.h  strings.cpp  strings.h
cpp-algo/src/containers/: MinHeap.cpp  MinHeap.h  min_heap.cpp  min_heap.h
cpp-algo/src/dp/: dp.cpp  dp.h
cpp-algo/src/ents/: ListNode.cpp  ListNode.h
cpp-algo/src/ext/: fmt.cpp  fmt.h
cpp-algo/src/topics/: Arrays.cpp  Arrays.h  Dp.cpp  Dp.h  Graphs.cpp  Graphs.h  LinkedLists.cpp  LinkedLists.h  Strings.cpp  Strings.h
cpp-algo/src/topics/arrays-and-strings/: arrays.cpp  arrays.h  strings.cpp  strings.h
cpp-algo/src/topics/dp/: dp.cpp
cpp-algo/src/topics/linked-lists/: linked_lists.cpp  linked_lists.h  list_node.cpp  list_node.h
cpp-algo/src/topics/trees-and-graphs/: robot.cpp  robot.h  trees_and_graphs.cpp  trees_and_graphs.h
cpp-algo/src/traits/: is_iterable.h  traits.h
cpp-algo/test/: arrays_test.cpp  dp_test.cpp  main.cpp  main_test.cpp
cpp-algo/test/arrays-and-strings/: arrays.cpp  arrays_test.cpp
cpp-algo/test/dp/: dp_test.cpp
csharp-algo/: csharp-algo.sln
docs/: Algorithms_Combined.md  additional-patterns.md  algo-amazon-75-patterns.md  algo-combined.md  algo-pattern-id.md  algo-templates.md  algorithm-pattern-identification.md  arrays.md  backtracking.md  dendron.yml  dynamic-programming.md  glossary.md  graphs.md  heaps.md  index.md  learning-activities.md  lesson-plan.md  linked-lists.md  ready-to-use-activities.md  speedrun-answers.md  speedrun-combined.md  speedrun-detailed.md  speedrun-new.md  speedrun-simple-answers.md  speedrun-simple.md  speedrun.asciidoc  speedrun.md  speedrun2.md  template.md  trees.md
docs 1/: additional-patterns.md  arrays.md  backtracking.md  graphs.md  index.md  learning-activities.md  lesson-plan.md  linked-lists.md  ready-to-use-activities.md  trees.md
dynamic-programming/: recursion.py
elements-of-prog/: arrays.py  primitives.py
go-algo/: .webui_secret_key  arrays-and-strings.go  arrays.go  arrays.go2  arrays_and_strings.go  dp.go  dp.go2  go.mod  go.sum  int-heap.go  linked-lists.go  linked_lists.go  main.go  main.go2  main_liftoff.go  main_liftoff_backup.go  min-heap.go  recursion.go  slice_test.go  string_test.go  trees.go  trees.go2
grokk-algo/: bfs.py  binary-search.py  quick-sort.py  selection-sort.py
grokk-dp/: knapsack.py  subsets.py
grokk-tci/: binary-search.py  cyclic-sort.py  dfs.py  dual-heaps.py  dynamic-programming.py  fast-and-slow-pointers.py  k-way-merge.py  linked-list.py  pointers.py  sliding-window.py  subsets.py  top-k-elements.py  topological-sort.py
hack-algo/: .gitignore  .hhconfig  hhast-lint.json  main.hack
leetcode/: arrays-and-strings.py  arrays.py  binary-trees.py  come-back-to.txt  (+11 more)
(+793 files in other folders)
